--- a/frontend/src/projects/app/container/shell/shell-component.html
+++ b/frontend/src/projects/app/container/shell/shell-component.html
@@ -1,5 +1,5 @@
 <mat-sidenav-container fullscreen>
-  <mat-sidenav #sidenav="matSidenav" mode="side" opened class="sidenav">
+  <mat-sidenav #sidenav mode="side" opened class="sidenav">
     <app-sys-sidenav (toggleSidenav)="toggleExpansion()"></app-sys-sidenav>
   </mat-sidenav>
 
