--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -15,7 +15,14 @@
       rel="stylesheet"
     />
   </head>
-  <body class="mat-typography">
+  <body>
+    <!-- <style>
+      @media (prefers-color-scheme: dark) {
+        body {
+          background-color: #141414;
+        }
+      }
+    </style> -->
     <app-root></app-root>
   </body>
 </html>
