change logo anf title

--- a/frontend/src/projects/app/container/shell/shell-component.html
+++ b/frontend/src/projects/app/container/shell/shell-component.html
@@ -29,7 +29,7 @@
       (isExpanded() && largerScreens()) || (drawerOpen() && smallerScreens())
     "
   >
-    <app-logo [title]="'NivJenz'" [expanded]="isExpanded() || smallerScreens()">
+    <app-logo [title]="'Davince Resolve Fusion'" [expanded]="isExpanded() || smallerScreens()">
     </app-logo>
     <app-sys-sidenav
       [canClose]="!smallerScreens()"
