update the my account she edit all  the info of the accunt

--- a/frontend/src/projects/app/container/shell/shell-component.html
+++ b/frontend/src/projects/app/container/shell/shell-component.html
@@ -91,6 +91,7 @@
           <mat-menu #userMenu xPosition="before" class="dark:!bg-black">
             <button
               mat-menu-item
+              (click)="openMyAccountModal()"
               class="group dark:!text-gray-300 dark:hover:!bg-gray-900"
             >
               <mat-icon class="!text-primary-300 group-hover:!text-primary"
